crates/cli/tests/snapshots/lib__check@operator_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/operator_type_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/operator_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[03] Error: Invalid operator + for lhs of type I32 and rhs of type F32
   ╭─[ tests/check/operator_type_mismatch.nemo:2:6 ]
   │
 2 │    1 + 2.0
   │      ┬  
   │      ╰── Invalid operator + for lhs of type I32 and rhs of type F32
───╯


----- stderr -----
Error: "Check failed with 1 errors"
